Add datetime program

--- a/Beginning_Python.ipynb
+++ b/Beginning_Python.ipynb
@@ -544,6 +544,105 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Using Datetime\n",
+    "\n",
+    "The program will use the values the user enters to\n",
+    "sreturn a message with the following template.\n",
+    "\n",
+    "[Name] is a [Age] year old [male/female/non-binary].\n",
+    "[He/She/They] [was/were] born ins [Place] and\n",
+    "[his/her/their] SIN # is [SIN #]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#imports\n",
+    "from datetime import datetime\n",
+    "\n",
+    "# global consts\n",
+    "DAYS_IN_YEAR = 365.25\n",
+    "\n",
+    "# Input prompts with validation\n",
+    "print(\"Please enter the following values using the suggested format:\")\n",
+    "\n",
+    "# Collect name from input, and process and validate it\n",
+    "print(\"Enter only the first and last name, no initials or middle name.\")\n",
+    "name = input(\"Name (last, first): \")\n",
+    "try:\n",
+    "    full_name = name.split(\",\")\n",
+    "    for index in range(len(full_name)):\n",
+    "        full_name[index] = full_name[index].strip() # Remove white spaces\n",
+    "        full_name[index] = full_name[index].capitalize() # Capitalcase\n",
+    "    last, first = full_name #unpack list\n",
+    "except:\n",
+    "    print(\"Please enter both last name and first name \")\n",
+    "    print(\"separated by a comma: e.g., Last, First\")\n",
+    "    print(\"and no initials or middle name.\")\n",
+    "    exit()\n",
+    "\n",
+    "# Get the user's sex and process and validate entry\n",
+    "sex = input(\"Sex (M/F/N): \")\n",
+    "try:\n",
+    "    if (sex.lower() == \"m\"):\n",
+    "        sex = \"male\"\n",
+    "        pronoun = \"he was\"\n",
+    "        possessive = \"his\"\n",
+    "    elif (sex.lower() == \"f\"):\n",
+    "        sex = \"female\"\n",
+    "        pronoun = \"she was\"\n",
+    "        possessive = \"her\"\n",
+    "    elif (sex.lower() == \"n\"):\n",
+    "        sex = \"non-binary\"\n",
+    "        pronoun = \"they were\"\n",
+    "        possessive = \"their\"\n",
+    "    else:\n",
+    "        raise ValueError\n",
+    "except:\n",
+    "    print(\"Please only enter M, F, or N for the sex.\")\n",
+    "    exit()\n",
+    "\n",
+    "# Get the date of birth, process and validate entry\n",
+    "date_of_birth = input(\"D.O.B (YYYY-mm-dd): \")\n",
+    "try:\n",
+    "    date_of_birth = datetime.strptime(date_of_birth, \"%Y-%m-%d\")\n",
+    "    today = datetime.today()\n",
+    "    age = (today - date_of_birth)\n",
+    "    age = int(age.days // DAYS_IN_YEAR) #integer division\n",
+    "except:\n",
+    "    print(\"Please format the date of birth as Year-month-day,\")\n",
+    "    print(\"e.g. 1999-11-22\")\n",
+    "    exit()\n",
+    "\n",
+    "# Get the place of birth, accept as is, but capitalize\n",
+    "place_of_birth = input(\"Place / city of birth: \").capitalize()\n",
+    "\n",
+    "# Get the SIN #, validate data\n",
+    "sin = input(\"SIN: \") # not converting to int\n",
+    "try:\n",
+    "    assert(sin.isnumeric()) # for checking for length\n",
+    "    # Also not checking for other validity measures\n",
+    "    # such as requirement for sin to be positive integer\n",
+    "    # but here is the code I would actually use to check:\n",
+    "    # assert(sin.isdigit() && len(sin) == 9 && int(sin) > 0)\n",
+    "except:\n",
+    "    print(\"Please enter a numeric value for SIN\")\n",
+    "\n",
+    "output = f'{first} {last} is {age}-year-old '\n",
+    "output += f'{sex}. {pronoun.capitalize()} born in '\n",
+    "output += f'{place_of_birth} and {possessive} SIN # is '\n",
+    "output += f'{sin}.'\n",
+    "\n",
+    "print(output)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Guessing Game\n",
     "Pretty self explanatory, see code below."
    ]
