Add ATM program

--- a/Beginning_Python.ipynb
+++ b/Beginning_Python.ipynb
@@ -544,6 +544,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This is a simple ATM program that asks the user to enter a PIN. \n",
+    "If the user enters the correct PIN, the program will display the account balance.\n",
+    "If the user enters the wrong PIN three times, the program will lock the account.\n",
+    "\n",
+    "sideeffects:\n",
+    "    - reads input from the user\n",
+    "    - displays output to the user\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Global Constants\n",
+    "TRIES = 3\n",
+    "SECRET = \"1234\"\n",
+    "BALANCE = 0.00\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    print(\"Welcome to the ATM!\")\n",
+    "    for i in range(TRIES):\n",
+    "        pin = input(\"Please enter your PIN: \")\n",
+    "        if pin == SECRET:\n",
+    "            print(f'Your account balance is {BALANCE}. Goodbye!')\n",
+    "            break\n",
+    "        else:\n",
+    "            print(\"Invalid pin!\")\n",
+    "    else:\n",
+    "        print(\"Account locked! Please contact your bank.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Using Datetime\n",
     "\n",
     "The program will use the values the user enters to\n",
