loop to create range added

--- a/Beginning_Python.ipynb
+++ b/Beginning_Python.ipynb
@@ -585,6 +585,110 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This is a simple program that displays a range of numbers based on user input.\n",
+    "User can enter a start value, end value, and step value. \n",
+    "The program will display the numbers in the range, including the end value.\n",
+    "\n",
+    "requirements:\n",
+    "    - input can either be an integer or an empty string\n",
+    "    - end must be an integer and cannot be empty\n",
+    "\n",
+    "sideeffects:\n",
+    "    - reads input from the user\n",
+    "    - displays output to the user\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def get_range():\n",
+    "    \"\"\"\n",
+    "    get_range() -> tuple\n",
+    "    This function asks the user for a start value, end value, and step value.\n",
+    "    If the user does not enter a value, the default value will be used for start and step.\n",
+    "    User input is validated to ensure that the values are integers or empty strings.\n",
+    "    If the end value is empty, the user will be prompted to enter a valid value.\n",
+    "\n",
+    "    requirements:\n",
+    "        - start and step input can either be an integer or an empty string\n",
+    "        - end input must be an integer and cannot be empty\n",
+    "\n",
+    "    returns:\n",
+    "        - a tuple containing the start, end, and step values\n",
+    "    \"\"\"\n",
+    "\n",
+    "\n",
+    "    start = input(\"Enter a start value (Default 0): \")\n",
+    "    while(True): # loop until a valid value is entered\n",
+    "        try:\n",
+    "            if start == \"\":\n",
+    "                start = 0\n",
+    "            else:\n",
+    "                start = int(start)\n",
+    "                break\n",
+    "        except ValueError:\n",
+    "            print(\"Oop! Bad value! Please enter a valid number.\")\n",
+    "            start = input(\"Enter a start value (Default 0): \")\n",
+    "\n",
+    "    end = input(\"Enter an end value (required): \")\n",
+    "    while(True): # loop until a valid value is entered\n",
+    "        try:\n",
+    "            if end == \"\":\n",
+    "                raise ValueError\n",
+    "            else:\n",
+    "                end = int(end)\n",
+    "                break\n",
+    "        except ValueError:\n",
+    "            print(\"Oop! Bad value! Please enter a valid number.\")\n",
+    "            end = input(\"Enter an end value (required): \")\n",
+    "    \n",
+    "    \n",
+    "    step = input(\"Enter a step value (Default 1): \")\n",
+    "    while(True): # loop until a valid value is entered\n",
+    "        try:\n",
+    "            if step == \"\":\n",
+    "                step = 1\n",
+    "            else:\n",
+    "                step = int(step)\n",
+    "                break\n",
+    "        except ValueError:\n",
+    "            print(\"Oop! Bad value! Please enter a valid number.\")\n",
+    "            step = input(\"Enter a step value (Default 1): \")\n",
+    "    \n",
+    "    return start, end, step\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "print(\"Hello!\")\n",
+    "\n",
+    "start, end, step = get_range() # get the input values\n",
+    "\n",
+    "print(\"The numbers are:\", end=\" \") # display the numbers\n",
+    "for i in range(start, end+1, step):\n",
+    "    print(i, end=\" \")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Using Datetime\n",
     "\n",
     "The program will use the values the user enters to\n",
