Add Blackjack to Beginning_Python

--- a/Beginning_Python.ipynb
+++ b/Beginning_Python.ipynb
@@ -834,6 +834,262 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Blackjack is a popular card game.\n",
+    "The objective of the game is to draw cards and obtain the highest total not exceeding 21.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# imports\n",
+    "import random\n",
+    "\n",
+    "# Global Variables\n",
+    "CARD_VALUES = list(range(1, 11)) # The possible card values range from 1 to 10\n",
+    "\n",
+    "def draw_card():\n",
+    "    \"\"\"\n",
+    "    draw_card()\n",
+    "\n",
+    "    :return: random number from the card values\n",
+    "    the probability of drawing a card is always equal for all cards.\n",
+    "    \"\"\"\n",
+    "    return random.choice(CARD_VALUES)\n",
+    "\n",
+    "def deal(list_of_cards):\n",
+    "    \"\"\"\n",
+    "    dear(list_of_cards)\n",
+    "\n",
+    "    :param list_of_cards: list of current cards in a player/dealer's hand\n",
+    "    :return: None\n",
+    "    :side effect: modifies list_of_cards\n",
+    "    \"\"\"\n",
+    "    list_of_cards.append(draw_card())\n",
+    "\n",
+    "def begin_game(player, dealer):\n",
+    "    \"\"\"\n",
+    "    begin_game(player, dealer)\n",
+    "\n",
+    "    :param player: player's hand\n",
+    "    :param dealer: dealers' hand\n",
+    "    :return: None\n",
+    "    :side effect: prints to screen\n",
+    "\n",
+    "    The game begins by dealing two visible cards to the player, and two cards to the dealer.\n",
+    "    However, in the case of the dealer, one card is visible to other player\n",
+    "    while the other is hidden.\n",
+    "    \"\"\"\n",
+    "    deal(player)\n",
+    "    deal(player)\n",
+    "    deal(dealer)\n",
+    "    deal(dealer) # The second card is invisible\n",
+    "\n",
+    "    print(f'Player Hand: {player[0]} {player[1]}')\n",
+    "    print(f'Dealer Hand: {dealer[0]} X')\n",
+    "\n",
+    "def get_player_input():\n",
+    "    \"\"\"\n",
+    "    get_player_input()\n",
+    "\n",
+    "    :return: bool\n",
+    "    :side-effect: reads input\n",
+    "\n",
+    "    The player decides whether to \"hit\" (draw another card), or \"stand\" which ends their turn.\n",
+    "    choice to \"hit\" returns false\n",
+    "    choice to \"stand\" returns true\n",
+    "    must input a valid choice\n",
+    "    \"\"\"\n",
+    "    while True:\n",
+    "        player_choice = input(\"Please type 'h' for hit or 's' for stand and press 'enter'\\n\")\n",
+    "        # sanitize player input\n",
+    "        try:\n",
+    "            if player_choice.lower() == \"h\":\n",
+    "                return False\n",
+    "            if player_choice.lower() == \"s\":\n",
+    "                return True\n",
+    "            raise ValueError\n",
+    "        except ValueError:\n",
+    "            print(\"Invalid Input, please only enter 'h' or 's'\\n\")\n",
+    "\n",
+    "def check_busts(list_of_cards):\n",
+    "    \"\"\"\n",
+    "    check_busts(list_of_cards)\n",
+    "\n",
+    "    :param list_of_cards:\n",
+    "    :return: bool\n",
+    "\n",
+    "    checks to see if the given hand total exceeds 21 (and is hence busted)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    return sum(list_of_cards) > 21\n",
+    "\n",
+    "def player_turn(player_hand):\n",
+    "    \"\"\"\n",
+    "    player_turn(player_hand)\n",
+    "\n",
+    "    :param player_hand: list of cards in player's hand\n",
+    "    :return: tuple of bools (player_busted, player_stands)\n",
+    "    :side effect: modifies player_hand\n",
+    "\n",
+    "    If the player reaches 21, the player stands\n",
+    "    The player may hit any number of times.\n",
+    "    Should the total of the cards exceed 21, the player \"busts\" and loses the game to the dealer.\n",
+    "    The function returns a pair (player_busted, player_stands)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    player_busted = False # variable to check if player is busted\n",
+    "    must_stand = sum(player_hand) == 21 # If the player reaches 21, the player stands\n",
+    "\n",
+    "    if must_stand:\n",
+    "        print(\"Player is at 21, and must stand.\")\n",
+    "        player_stands = must_stand\n",
+    "    else:\n",
+    "        player_stands = get_player_input()\n",
+    "        if not player_stands:\n",
+    "            deal(player_hand)\n",
+    "            player_busted = check_busts(player_hand)\n",
+    "\n",
+    "    return (player_busted, player_stands)\n",
+    "\n",
+    "def dealer_turn(dealer_hand):\n",
+    "    \"\"\"\n",
+    "    dealer_turn(dealer_hand)\n",
+    "\n",
+    "    :param dealer_hand: list of cards in dealer's hand\n",
+    "    :return: tuple of bools (dealer_busted, dealer_stands)\n",
+    "\n",
+    "    The dealer must continue to hit if the total is 16 or less,\n",
+    "    and must stand if the value is 17 or more\n",
+    "    The dealer busts if their total is over 21 and the player wins.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    dealer_busted = False\n",
+    "    dealer_stands = False\n",
+    "    must_stand = sum(dealer_hand) >= 17\n",
+    "\n",
+    "    if must_stand:\n",
+    "        dealer_stands = must_stand\n",
+    "    else:\n",
+    "        deal(dealer_hand)\n",
+    "        dealer_busted = check_busts(dealer_hand)\n",
+    "\n",
+    "    return (dealer_busted, dealer_stands)\n",
+    "\n",
+    "def game_mechanics():\n",
+    "    \"\"\"\n",
+    "    game_mechanics()\n",
+    "\n",
+    "    :return: None\n",
+    "\n",
+    "    The main function for playing the game.\n",
+    "    Follows the rules of BlackJack as laid out in the assignment description.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # set up player and dealer with empty hands\n",
+    "    player_hand = []\n",
+    "    dealer_hand = []\n",
+    "\n",
+    "    # Set up check conditions\n",
+    "    player_busted = False\n",
+    "    player_stands = False\n",
+    "    dealer_busted = False\n",
+    "    dealer_stands = False\n",
+    "\n",
+    "    # start a new game by dealing two cards\n",
+    "    begin_game(player_hand, dealer_hand)\n",
+    "\n",
+    "    while True:\n",
+    "        print(\"Player's Turn:\")\n",
+    "        player_busted, player_stands = player_turn(player_hand)\n",
+    "\n",
+    "        print(f'Current Player hand {player_hand}')\n",
+    "\n",
+    "        if player_busted:\n",
+    "            print(\"Player Busted! Dealer Wins!\")\n",
+    "            return None\n",
+    "\n",
+    "        print(\"Dealer's Turn:\")\n",
+    "        if len(dealer_hand) == 2:\n",
+    "            print(f'Dealer Reveals second card: {dealer_hand}')\n",
+    "\n",
+    "        dealer_busted, dealer_stands = dealer_turn(dealer_hand)\n",
+    "        if not dealer_stands:\n",
+    "            print(\"Dealer draws.\")\n",
+    "        else:\n",
+    "            print(\"Dealer stands.\")\n",
+    "\n",
+    "        print(f'Current Dealer Hand: {dealer_hand}')\n",
+    "        if dealer_busted:\n",
+    "            print(\"Dealer Busted! Player Wins!\")\n",
+    "            return None\n",
+    "\n",
+    "        if (player_stands and dealer_stands):\n",
+    "            print(\"Both Player and Dealer stood, signalling end of game\")\n",
+    "            print(f'Current Player hand {player_hand}')\n",
+    "            print(f'Current Dealer hand {dealer_hand}')\n",
+    "            if sum(player_hand) > sum(dealer_hand):\n",
+    "                print(\"Player Wins! Game Over.\")\n",
+    "            else:\n",
+    "                #The dealer wins all ties\n",
+    "                # (i.e. if both the dealer and the player reach 21, the dealer wins)\n",
+    "                print(\"Dealer Wins! Game Over.\")\n",
+    "            break\n",
+    "\n",
+    "        print(\"----- END OF ROUND -------\")\n",
+    "        print(\"----- Next Round:  -------\")\n",
+    "        print(f'Current Player hand {player_hand}')\n",
+    "        print(f'Current Dealer hand {dealer_hand}')\n",
+    "\n",
+    "    return None\n",
+    "\n",
+    "def req_new_game():\n",
+    "    \"\"\"\n",
+    "    req_new_game()\n",
+    "\n",
+    "    :return: bool\n",
+    "\n",
+    "    Asks the user if they wish to play a new game.\n",
+    "    Returns True if yes\n",
+    "    Returns False if no\n",
+    "    \"\"\"\n",
+    "\n",
+    "    while True:\n",
+    "        response = input('Do you want to play a new game (\"y\" for yes, \"n\" for no)?')\n",
+    "        try:\n",
+    "            if response.lower() == 'y':\n",
+    "                return True\n",
+    "            if response.lower() == 'n':\n",
+    "                return False\n",
+    "            raise ValueError\n",
+    "        except ValueError:\n",
+    "            print(\"Invalid Input! Please only enter 'y' or 'n'.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_game = True\n",
+    "while new_game:\n",
+    "print(\"----------------------\")\n",
+    "print(\"-------NEW GAME-------\")\n",
+    "print(\"----------------------\")\n",
+    "game_mechanics()\n",
+    "new_game = req_new_game() # The program indicates who the winner is and asks to play again\n",
+    "\n",
+    "print(\"----------------------\")\n",
+    "print(\"Thank you for playing!\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Sides of equal length of quadrilateral Example"
    ]
   },
